# OpenSpacePlanner

./: .gitignore  CMakeLists.txt  README.md
Ipopt_x86pc/include/coin-or/: IpoptConfig.h
Ipopt_x86pc/lib/: libcoinmumps.la  libcoinmumps.so.3  libcoinmumps.so.3.0.4  libipopt.la  libipopt.so.3.14.12  libsipopt.la  libsipopt.so.3  libsipopt.so.3.14.12
Ipopt_x86pc/lib/pkgconfig/: coinmumps.pc  ipopt.pc
include/open_space_planner/: AStarNode.h  AStarPlanner.h  GeometryFunc.h  Grid.h  GridRect.h  HybridAStarNode.h  HybridAStarPlanner.h  IaOptimizer.h  Map.h  PathOptIpoptNlp.h  PathOptimizerMisc.h  PathSmoother.h  Point.h  Pose.h  Rect.h  ReedsSheppPath.h  SharedRecursiveMutex.h  Timer.h
scripts/: build.sh
src/: AStarNode.cpp  AStarPlanner.cpp  GeometryFunc.cpp  Grid.cpp  GridRect.cpp  HybridAStarNode.cpp  HybridAStarPlanner.cpp  IaOptimizer.cpp  Map.cpp  PathOptIpoptNlp.cpp  PathSmoother.cpp  Point.cpp  Pose.cpp  Rect.cpp  ReedsSheppPath.cpp
test/: TestAStarPlanner.cpp  TestHybridAStarPlanner.cpp  path_smoother_ipopt.opt
test/test_map/: map.pgm  test_map.pgm
